--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
+        "php": ">=7.1.3",
         "symfony/process": "~4.2.1",
-        "symfony/yaml": "~4.2.1"
+        "symfony/yaml": "~4.2.1",
+        "symfony/http-foundation": "~4.2.1"
     }
 }
