--- a/config.yml.dist
+++ b/config.yml.dist
@@ -2,4 +2,5 @@ bin: bin/satis   # Where your satis bin is located
 json: satis.json # Where your satis.json is located
 webroot: web     # Where you want to dump index.html and packages.json
 user: ~          # Run script as another user (sudo -u user -i bin/satis build ...)
-secret: mysecret # Your secret configured in your webhook call
+authorized_ips: [204.232.175.64/27, 192.30.252.0/22] # Authorized IP address (defaults are GitHub Hook servers). Use ~ if you want to allow all IPs 
+secret:          # Your secret configured in your webhook call
